--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,10 +3,10 @@
 {% block title %}Bienvenue sur Meet'O'clock ! {% endblock %}
 
 {% block body %}
+    <div class="wallpaper">
+        <div class="form--layout">  FORMULAIRE  </div>
+    Image par <a href="https://pixabay.com/fr/users/StartupStockPhotos-690514/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=593341">StartupStockPhotos</a>
+     de <a href="https://pixabay.com/fr/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=593341">Pixabay</a>
+    </div> 
 
-
-<div class="example-wrapper">
-    <h1>Hello ! ✅</h1>
-
-</div>
 {% endblock %}
