--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,6 @@
 <div class="homepage--main row">
     <header class="homepage--left col-12  col-xl-6">
         <h1>MEET'O'CLOCK</h1>
-        <h1 class="d-none d-sm-block">MEET'O'CLOCK</h1>
         <span>Le réseau social des full-remote pro</span>
         <div class="d-none d-xl-block"><img src="{{ asset('img/paris.svg.png') }}" alt="ligne de métro de paris"></div>
         <div class="homepage--buttons">
@@ -14,7 +13,7 @@
             <button class="homepage--button btn btn-light">Se connecter</button>
         </div>
     </header> 
-    <div class="homepage--right  col-12 col-xl-6 offset-xl-0">
+    <div class="homepage--right col-12 col-xl-6">
         <h2 class="homepage--title"> Rejoignez la communauté Meet'O'Clock</h2>
         <div class="form-group"> 
             {{ form_start(form)}} 
