first route eventcontroller + template

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Bienvenue sur {{ parent() }} ! {% endblock %}
 
-{% block body %}
+{% block content %}
 <div class="homepage--main row">
     <header class="homepage--left col-12  col-xl-6">
         <h1>MEET'O'CLOCK</h1>
