--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -2,19 +2,16 @@
 
 {% block title %}{{ parent() }} - Events{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/meet-o-clock/src/Controller/EventController.php'|file_link(0) }}">src/Controller/EventController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/meet-o-clock/templates/event/index.html.twig'|file_link(0) }}">templates/event/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% block content %}
+<ul>
+    {% for event in events %}
+        <li>{{ event.name }}
+            {{ event.description }}
+            {{ event.date|date('d/m/Y') }}
+        </li>
+    {% else %}
+        IL n'y a pas d'évènements en cours actuellement. Créez-en un ! 
+        <a href="#"><button>Créer un évènement</button></a>
+    {% endfor %}
+</ul>
 {% endblock %}
