--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,19 @@
+.main--header{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    width: 20%;
+    min-height: 100vh;
+}
+
+main{
+    display: flex;
+}
+
+.main--h1{
+    justify-content: center;
+}
+
 .homepage--main{
     display: flex;
     min-height: 100vh;
