--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,30 +1,43 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Bienvenue sur {{ parent() }} ! {% endblock %}
-
-{% block content %}
-<div class="homepage--main row">
-    <header class="homepage--left col-12  col-xl-6">
-        <h1>MEET'O'CLOCK</h1>
-        <span>Le réseau social des full-remote pro</span>
-        <div class="d-none d-xl-block"><img src="{{ asset('img/paris.svg.png') }}" alt="ligne de métro de paris"></div>
-        <div class="homepage--buttons">
-            <button class="homepage--button btn btn-light">S'inscrire</button>
-            <button class="homepage--button btn btn-light">Se connecter</button>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Meet'O'clock</title>
+       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Cookie|Fredoka+One&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+        
+    </head>
+    <body>
+        <div class="homepage--main row">
+            <header class="homepage--left col-12  col-xl-6">
+                <h1>MEET'O'CLOCK</h1>
+                <span>Le réseau social des full-remote pro</span>
+                <div class="d-none d-xl-block"><img src="{{ asset('img/paris.svg.png') }}" alt="ligne de métro de paris"></div>
+                <div class="homepage--buttons">
+                    <button class="homepage--button btn btn-light">S'inscrire</button>
+                    <button class="homepage--button btn btn-light">Se connecter</button>
+                </div>
+            </header> 
+            <div class="homepage--right col-12 col-xl-6">
+                <h2 class="homepage--title"> Rejoignez la communauté Meet'O'Clock</h2>
+                <div class="form-group"> 
+                    {{ form_start(form)}} 
+                    <div class="form-group"> {{ form_row(form.firstname) }}</div>
+                    <div class="form-group"> {{ form_row(form.lastname) }}</div>
+                    <div class="form-group"> {{ form_row(form.email) }}</div>
+                    <div class="form-group"> {{ form_row(form.username) }}</div>
+                    <div class="form-group"> {{ form_row(form.password) }}</div>
+                    <button class="btn btn-dark homepage--button" type="submit">Envoyer</button>
+                    {{ form_end(form)}}   
+                </div>
+            </div>
         </div>
-    </header> 
-    <div class="homepage--right col-12 col-xl-6">
-        <h2 class="homepage--title"> Rejoignez la communauté Meet'O'Clock</h2>
-        <div class="form-group"> 
-            {{ form_start(form)}} 
-            <div class="form-group"> {{ form_row(form.firstname) }}</div>
-            <div class="form-group"> {{ form_row(form.lastname) }}</div>
-            <div class="form-group"> {{ form_row(form.email) }}</div>
-            <div class="form-group"> {{ form_row(form.username) }}</div>
-            <div class="form-group"> {{ form_row(form.password) }}</div>
-            <button class="btn btn-dark homepage--button" type="submit">Envoyer</button>
-            {{ form_end(form)}}   
-        </div>
-    </div>
-</div>
-{% endblock %}
+        {% block javascripts %}
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        {% endblock %}
+    </body>
+</html>
