--- a/templates/_header/_main_nav.html.twig
+++ b/templates/_header/_main_nav.html.twig
@@ -1,11 +1,11 @@
-<header>
-    <h1>MEET'O'CLOCK</h1>
+    <h1>MEET
+        'O'
+        CLOCK</h1>
     <nav>
-        <a class="nav-link" href="#">Accueil</a>
+        <a class="nav-link" href="{{ path('events', {'user':2000}) }}">Accueil</a>
         <a class="nav-link" href="#">Profil</a>
         <a class="nav-link" href="#">Groupes</a>
         <a class="nav-link" href="#">Evènements</a>
         <a class="nav-link" href="#">Carte</a>
         <a class="nav-link" href="#">Déconnexion</a>
     </nav>
-</header>
