--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,16 +13,21 @@
     <body>
         <main>
             <header class="main--header">
-                {% block header %}{% endblock %}
+                    {% include '_header/_main_nav.html.twig' %}
             </header>
-            <div class="d-flex flex-column">
-                <h1 id="main--h1">{% block title1 %}{% endblock %}</h1>
+            <div class="main--content">
+                <h1 id="main--h1">
+                    {% block pageName %}{% endblock %}
+                </h1>
                 {% block content %}{% endblock %}
             </div>
         </main>
-        <div>
-            {% block footer %}{% endblock %}
-        </div>
+        <footer class="main--footer">
+            <a href="">Copyright</a> 
+            <a href="">Mentions Légales</a>
+            <a href="">Contact
+            </a>
+        </footer>
         {% block javascripts %}
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
